--- a/gerenciadorClin/src/main/resources/templates/cliente/pesquisarClientes.html
+++ b/gerenciadorClin/src/main/resources/templates/cliente/pesquisarClientes.html
@@ -34,20 +34,20 @@
 					<div class="col-xs-6 col-sm-1 form-group bw-required">
 						<div class="input-group">
 							<span class="input-group-addon"> <i class="fas fa-search"></i>
-							</span> <input id="nome" class="form-control" type="text" data-mask="CL0000"
-								placeholder="Nº" />
+							</span> <input id="numCliente" class="form-control" type="text" data-mask="CL0000"
+								placeholder="Nº" th:field=*{numCliente} />
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-10 form-group bw-required">
 						<div class="input-group">
 							<span class="input-group-addon"> <i class="fas fa-search"></i>
 							</span> <input id="nome" class="form-control" type="text"
-								placeholder="Nome Cliente" />
+								placeholder="Nome Cliente" th:field=*{nome} />
 						</div>
 					</div>
 					<div class="col-xs-4 col-sm-1 form-group bw-required">
 						<div class="input-group">
-							<a class="btn  btn-primary" th:href="@{/clientes/novo}"> <i
+							<a class="btn  btn-primary" type="submit"> <i
 								class="fas fa-search"></i> <span class="hiddens-xs hidden-sm">
 									Pesquisar </span>
 							</a>
